<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reverse VNC Server</string>
    <string name="action_settings">Settings</string>
    <string name="textView1Value">Reverse connection host:port</string>
    <string name="textView2Value">Port</string>
    <string name="textView3Value">Scale</string>
    <string name="reconnectStatic">Reconnect on connection lost</string>
    <string name="startstopButtonText">Start</string>
    <string name="viewonlyStatic">View only (ROOT not required)</string>
    <string name="vncConnectStr"></string>
    <string name="httpConnectStr"></string>
    <string name="version">1.2</string>

</resources>
