<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/textView1Value"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="44dp"
        android:text="@string/textView2Value"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/reversehostport_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/startstop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="45dp"
        android:onClick="starStopServer"
        android:text="@string/startstopButtonText" />

    <EditText
        android:id="@+id/port_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/viewonly_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reconnect_checkbox"
        android:layout_below="@+id/reconnect_checkbox"
        android:text="@string/viewonlyStatic" />

    <CheckBox
        android:id="@+id/reconnect_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/port_edit"
        android:layout_below="@+id/port_edit"
        android:text="@string/reconnectStatic" />

    <TextView
        android:id="@+id/vncConnectStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewonly_checkbox"
        android:layout_below="@+id/viewonly_checkbox"
        android:layout_marginTop="17dp"
        android:text="@string/vncConnectStr"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/httpConnectStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewonly_checkbox"
        android:layout_below="@+id/vncConnectStatic"
        android:text="@string/httpConnectStr"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
